# julgebra

./: Cargo.toml  README.md
examples/: lapack.rs  mul.rs
src/: array.rs  array_blas.rs  complex.rs  lapack_ffi.rs  lib.rs  main.rs  solver.rs
src/operators/: det.rs  mul.rs  sub.rs
